# image-proccesing

./: .gitignore
buivolov_e_a/: CMakeLists.txt  README.md  build.vs.2019.cmake
buivolov_e_a/prj.labs/: CMakeLists.txt
buivolov_e_a/prj.labs/lab01/: CMakeLists.txt  lab01.cpp  lab01.report.md.in.txt
buivolov_e_a/prj.labs/lab02/: CMakeLists.txt  lab02.cpp  lab02.report.md.in.txt
buivolov_e_a/prj.labs/lab03/: CMakeLists.txt  lab03.cpp  lab03.report.md.in.txt
buivolov_e_a/prj.labs/lab04/: CMakeLists.txt  lab04.cpp  lab04.report.md.in.txt
